--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda x_values: movies['budget']))\n",
+    "x_values = list(map(lambda x_values: ))\n",
     "y_values = None"
    ]
   },
