--- a/index.ipynb
+++ b/index.ipynb
@@ -163,8 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda x_values: movies['budget']))\n",
-    "y_values = None"
+    "x_values = list(map(lambda x_values: movies['budget'], movies))\n",
+    "y_values = list(map(lambda y_values: movies[]))"
    ]
   },
   {
