--- a/index.ipynb
+++ b/index.ipynb
@@ -175,12 +175,8 @@
     }
    ],
    "source": [
-    "x_values = []\n",
-    "y_values = []\n",
-    "\n",
-    "for i in scaled_movies():\n",
-    "    x_values.append(scaled_movies['budget'])\n",
-    "x_values"
+    "x_values = \n",
+    "y_values =\n"
    ]
   },
   {
