--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
     }
    ],
    "source": [
-    "x_values = list(map)\n",
+    "x_values = list(map(lambda movie: movie))\n",
     "y_values =\n"
    ]
   },
