--- a/index.ipynb
+++ b/index.ipynb
@@ -437,12 +437,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def regression_formula(x):\n",
-    "    return "
+    "    return 1.7*budget + 10"
    ]
   },
   {
